[package]
name = "my_retreat_nest"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Core ---
anyhow = "1.0.104"
chrono = "0.4.45"
dotenvy = "0.15.7"
once_cell = "1.21.4"
const-str = "1.1.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.24.0", features = ["v4"] }
rand = "0.8"

# --- Async runtime ---
tokio = { version = "1.52.3", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
] }

# --- Web framework ---
axum = { version = "0.8.9", features = ["multipart"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = [
    "catch-panic",
    "compression-gzip",
    "cors",
] }
tracing = "0.1.44"

# --- ORM & Database ---
sea-orm = { version = "1.1.20", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
migration = { path = "migration" }

# --- Email ---
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "tokio1-native-tls",
    "builder",
] }

# --- Auth & Security ---
jwt-simple = { version = "0.12.17", default-features = false, features = [
    "pure-rust",
] }
password-worker = { version = "0.4.0", features = ["rust-argon2"] }

mime_guess = "2.0.5"

[features]
default = []

[workspace]
members = ["migration", "."]

[dev-dependencies]
watch = "0.2.3"

# ===========================
# Performance Profiles
# ===========================
[profile.release]
opt-level = 3           # Maximum performance
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Force LLVM to optimize across the entire crate
panic = "abort"         # Remove unwind logic
strip = "debuginfo"     # Keep minimal debug info (remove symbols)
incremental = false     # Disable incremental for deterministic builds
overflow-checks = false # Slight perf gain; safe in production

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
incremental = true
